force-app/main/default/objects/Krow__Contract__c/Krow__Contract__c.object-meta.xml
<CustomObject>
    <label>Service Contract</label>
    <nameField>
        <displayFormat>C{00000000}</displayFormat>
        <label>Contract ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>