force-app/main/default/objects/Krow__Contract__c/fields/Krow__Billing_Account__c.field-meta.xml
<CustomField>
    <fullName>Krow__Billing_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>