force-app/main/default/objects/Krow__Contract__c/fields/Krow__Margin__c.field-meta.xml
<CustomField>
    <fullName>Krow__Margin__c</fullName>
    <formula>Krow__Total_Billed__c -  Krow__Total_Budgeted_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>