force-app/main/default/objects/Krow__Contract__c/fields/Krow__Margin_Pct__c.field-meta.xml
<CustomField>
    <fullName>Krow__Margin_Pct__c</fullName>
    <formula>IF(OR(ISBLANK( Krow__Total_Billed__c ), IF( Krow__Total_Billed__c= 0, TRUE, FALSE)), NULL, (( Krow__Total_Billed__c -  Krow__Total_Budgeted_Cost__c  ) / Krow__Total_Billed__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>