force-app/main/default/objects/Krow__Contract__c/fields/Krow__Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Krow__Payment_Terms__c</fullName>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Upon Receipt</fullName>
            </value>
            <value>
                <fullName>Net 30</fullName>
            </value>
            <value>
                <fullName>Net 45</fullName>
            </value>
            <value>
                <fullName>Net 60</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>