force-app/main/default/objects/Krow__Contract__c/fields/Krow__Total_Billed__c.field-meta.xml
<CustomField>
    <fullName>Krow__Total_Billed__c</fullName>
    <label>Total Billed</label>
    <summarizedField>Krow__Contract_Line__c.Krow__Invoiced_Amount__c</summarizedField>
    <summaryForeignKey>Krow__Contract_Line__c.Krow__Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>