force-app/main/default/objects/Krow__Contract__c/fields/Krow__Total_Contract_Amount__c.field-meta.xml
<CustomField>
    <fullName>Krow__Total_Contract_Amount__c</fullName>
    <label>Total Contract Amount</label>
    <summarizedField>Krow__Contract_Line__c.Krow__Contract_Line_Amount__c</summarizedField>
    <summaryForeignKey>Krow__Contract_Line__c.Krow__Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>