force-app/main/default/objects/Krow__Contract__c/listViews/Krow__All.listView-meta.xml
<ListView>
    <fullName>Krow__All</fullName>
    <columns>NAME</columns>
    <columns>Krow__Account__c</columns>
    <columns>Krow__Billing_Account__c</columns>
    <columns>Krow__Currency__c</columns>
    <columns>Krow__Payment_Terms__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>